syntax = "proto3";

package dslpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/dslpb";

import "mir/codegen_extensions.proto";

// ============================================================
// Messages
// ============================================================

message Origin {
  option (mir.struct) = true;

  uint64 contextID = 1;
  map<string, string> trace_context = 2 [(mir.omit_in_event_constructors) = true];
}
